# ImageFlowCanvas

./: .gitignore  .gitmodules  AGENTS.md  PERFORMANCE_OPTIMIZATION.md  README.md  docker-compose.camera-stream.yml  docker-compose.yml  final_validation.py  key_config.json  test-qr-generator.py  test_camera_stream.py  test_camera_stream_integration.py  test_integration.py  validate_camera_stream_integration.py  validate_implementation.py
app/: ENHANCED_FEATURES.md  README.md  build.sh  package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json  test_camera.rs
app/src-tauri/src/: auth.rs  database.rs  database_old.rs  lib.rs  main.rs
backend/: .env.example  Dockerfile  README.md  requirements.txt
container/: Dockerfile.baseimage
docs/: 0010_要件定義書.md  ARGO_WORKFLOWS_REMOVAL.md  BACKEND_ARCHITECTURE_CHANGES.md  NETWORK_TROUBLESHOOTING.md  argo-configuration.md  camera_stream_integration.md  grpc-health-check-fix.md  grpc-implementation.md  grpc_desktop_client.md  triton-setup.md
frontend/: Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  start-nginx.sh  vite.config.ts
kmp/: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
mediamtx_server/: mediamtx.yml
mlrun/: README.md  project.yaml
mlrun_server/: README.md
scripts/: build_all_services.sh  build_base_image.sh  build_grpc_services.sh  build_services.sh  build_web_services.sh  cleanup_disk.sh  deploy-optimized-grpc.sh  dev-start.sh  generate_protos.sh  performance_monitor.py  port-forward.sh  run-compose.sh  setup-camera-stream.sh  setup-complete.sh  setup-k3s.sh  setup-nomad-consul.sh  setup-yolo11.py  status.sh  (+6 more)
web/: README.md  (+8 more)
(+392 files in other folders)
