[package]
name = "imageflowcanvas-inspection-app"
version = "0.1.0"
description = "Cross-platform inspection application for ImageFlowCanvas"
authors = ["ImageFlowCanvas Team"]
edition = "2021"
default-run = "imageflowcanvas-inspection-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "imageflowcanvas_inspection_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "test_cameras"
path = "src/bin/test_cameras.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "uuid"] }
rqrr = "0.7"
image = "0.25"
anyhow = "1.0"
thiserror = "1.0"
jsonwebtoken = "9.0"
bcrypt = "0.15"
nokhwa = { version = "0.10", features = ["input-avfoundation"] }

